--- a/src/components/splash/splash.css
+++ b/src/components/splash/splash.css
@@ -1,23 +1,43 @@
-:root{
-    --splash-color: #000005;
-    --splash-shadow: #f85b006b;
+@keyframes flyLeft{
+    0% {left: 7.5rem;opacity: 0;}
+    100%{left: 0; opacity: 1;}
+}
+
+@keyframes flyRight{
+    0% {left: -7.5rem; opacity: 0;}
+    100%{left: 0; opacity: 1;}
+}
+
+@keyframes fadeIn{
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+
+:root {
+    --splash-color: #0a061a;
+    --splash-shadow: #08a3fda1;
     --splash-shadow-fn: 0 .1rem .15rem var(--splash-shadow);
     --splash-font: 'Cinzel Decorative', cursive;
     --splash-font-size: 8rem;
     --splash-padding: 3.5rem;
 }
 
-.splash-main{
+.splash-main {
     padding: 0;
-    margin:0;
+    margin: 0;
     min-height: auto;
 }
 
-.splash-chazing{
-
+.splash-chazing {
+    position: relative;
+    animation-name: flyLeft;
+    animation-delay: 1s;
+    animation-duration: 1.5s;
+    animation-fill-mode: both;
+    animation-timing-function: ease-in-out;
 }
 
-.splash-chazing_p{
+.splash-chazing_p {
     font-family: var(--splash-font);
     font-size: var(--splash-font-size);
     padding-left: var(--splash-padding);
@@ -26,16 +46,41 @@
     user-select: none;
 }
 
-.splash-dreams{
-
+.splash-dreams {
+    position: relative;
+    animation-name: flyRight;
+    animation-delay: 1s;
+    animation-duration: 1.5s;
+    animation-fill-mode: both;
+    animation-timing-function: ease-in-out;
 }
 
-.splash-dreams_p{
+.splash-dreams_p {
     margin-top: -12rem;
     font-family: var(--splash-font);
     font-size: var(--splash-font-size);
     padding-right: var(--splash-padding);
     color: var(--splash-color);
     text-shadow: var(--splash-shadow-fn);
+    user-select: none;
+}
+
+.full-name {
+    animation-name: fadeIn;
+    opacity: 0;
+    animation-delay: 1.5s;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-in;
+}
+
+.full-name_p {
+    font-family: 'Unica One', cursive;
+    font-size: 2.5rem;
+    letter-spacing: .7rem;
+    margin-top: -9.5rem;
+    padding-left: 1rem;
+    color: lightgoldenrodyellow;
+    text-shadow: .1rem .1rem .75rem #00597c6c;
     user-select: none;
 }
