--- a/src/components/splash/splash.css
+++ b/src/components/splash/splash.css
@@ -25,7 +25,7 @@
 .splash-main {
     padding: 0;
     margin: 0;
-    min-height: auto;
+    min-height: 100vh;
 }
 
 .splash-chazing {
@@ -80,7 +80,7 @@
     letter-spacing: .7rem;
     margin-top: -9.5rem;
     padding-left: 1rem;
-    color: lightgoldenrodyellow;
+    color: #fcfcfc;
     text-shadow: .1rem .1rem .75rem #00597c6c;
     user-select: none;
 }
