--- a/src/components/splash/splash.css
+++ b/src/components/splash/splash.css
@@ -13,6 +13,18 @@
     100% {opacity: 1;}
 }
 
+@keyframes floatSlightly{
+    0% {top: 0; left: .1rem}
+    50% {top: -1.0rem; left: -.1rem; opacity: 0.3;}
+    100% {top: 0; left: 0; opacity: 1;}
+}
+
+@keyframes floatSlightly-reverse{
+    0% {top: 0; left: .1rem; opacity: 1;}
+    50% {top: .5rem; left:-.15rem; opacity: 0.5;}
+    100% {top: 0;left:0; opacity: 1;}
+}
+
 :root {
     --splash-color: #0a061a;
     --splash-shadow: #08a3fda1;
@@ -30,11 +42,7 @@
 
 .splash-chazing {
     position: relative;
-    animation-name: flyLeft;
-    animation-delay: 1s;
-    animation-duration: 1.5s;
-    animation-fill-mode: both;
-    animation-timing-function: ease-in-out;
+    animation: flyLeft 1.5s ease-in-out 1s 1 normal both, floatSlightly 2.75s ease-in-out 3s infinite normal forwards;
 }
 
 .splash-chazing_p {
@@ -48,11 +56,7 @@
 
 .splash-dreams {
     position: relative;
-    animation-name: flyRight;
-    animation-delay: 1.5s;
-    animation-duration: 1.5s;
-    animation-fill-mode: both;
-    animation-timing-function: ease-in-out;
+    animation: flyRight 1.5s ease-in-out 1s 1 normal both, floatSlightly-reverse 2.5s ease-in-out 2.5s infinite normal forwards;
 }
 
 .splash-dreams_p {
