--- a/src/components/splash/splash.css
+++ b/src/components/splash/splash.css
@@ -14,16 +14,24 @@
 }
 
 @keyframes floatSlightly{
-    0% {top: 0; left: .1rem}
-    50% {top: -1.0rem; left: -.1rem; opacity: 0.3;}
-    100% {top: 0; left: 0; opacity: 1;}
+    0% {top: 0; left: .1rem; filter: blur(0px)}
+    50% {top: -1.0rem; left: -.1rem; opacity: 0.3; filter:blur(1px)}
+    100% {top: 0; left: 0; opacity: 1; filter: blur(0px)}
 }
 
 @keyframes floatSlightly-reverse{
-    0% {top: 0; left: .1rem; opacity: 1;}
-    50% {top: .5rem; left:-.15rem; opacity: 0.5;}
-    100% {top: 0;left:0; opacity: 1;}
+    0% {top: 0; left: .1rem; opacity: 1; filter: blur(0px)}
+    50% {top: .5rem; left:-.15rem; opacity: 0.5; filter: blur(2px)}
+    100% {top: 0;left:0; opacity: 1; filter: blur(0px)}
 }
+
+@keyframes fadeSlightly{
+    0% {opacity: 1; bottom: 0; left: 0; filter: blur(0px); filter: brightness(1)}
+    50% {opacity: .5; bottom: -.5rem; left: .05rem; filter: blur(3px); filter: brightness(1.5)}
+    75% {opacity: .25; bottom: -.1rem; left: -.2rem; filter: blur(1px); filter: brightness(1.2)}
+    100% {opacity: 1; bottom: 0; left: 0; filter: blur(0px); filter:brightness(1)}
+}
+
 
 :root {
     --splash-color: #0a061a;
@@ -70,12 +78,8 @@
 }
 
 .full-name {
-    animation-name: fadeIn;
-    opacity: 0;
-    animation-delay: 1.75s;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
-    animation-timing-function: ease-in;
+    position: relative;
+    animation: fadeIn 1.5s ease-in-out 2s 1 normal both, fadeSlightly 2.5s linear 3.5s infinite reverse forwards;
 }
 
 .full-name_p {
