--- a/src/components/splash/splash.css
+++ b/src/components/splash/splash.css
@@ -1,37 +1,105 @@
-@keyframes flyLeft{
-    0% {left: 7.5rem;opacity: 0;}
-    100%{left: 0; opacity: 1;}
+@keyframes flyLeft {
+    0% {
+        left: 7.5rem;
+        opacity: 0;
+    }
+    100% {
+        left: 0;
+        opacity: 1;
+    }
 }
 
-@keyframes flyRight{
-    0% {left: -7.5rem; opacity: 0;}
-    100%{left: 0; opacity: 1;}
+@keyframes flyRight {
+    0% {
+        left: -7.5rem;
+        opacity: 0;
+    }
+    100% {
+        left: 0;
+        opacity: 1;
+    }
 }
 
-@keyframes fadeIn{
-    0% {opacity: 0;}
-    100% {opacity: 1;}
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
-@keyframes floatSlightly{
-    0% {top: 0; left: .1rem; filter: blur(0px)}
-    50% {top: -1.0rem; left: -.1rem; opacity: 0.3; filter:blur(1px)}
-    100% {top: 0; left: 0; opacity: 1; filter: blur(0px)}
+@keyframes floatSlightly {
+    0% {
+        top: 0;
+        left: .1rem;
+        filter: blur(0px)
+    }
+    50% {
+        top: -1.0rem;
+        left: -.1rem;
+        opacity: 0.3;
+        filter: blur(1px)
+    }
+    100% {
+        top: 0;
+        left: 0;
+        opacity: 1;
+        filter: blur(0px)
+    }
 }
 
-@keyframes floatSlightly-reverse{
-    0% {top: 0; left: .1rem; opacity: 1; filter: blur(0px)}
-    50% {top: .5rem; left:-.15rem; opacity: 0.5; filter: blur(2px)}
-    100% {top: 0;left:0; opacity: 1; filter: blur(0px)}
+@keyframes floatSlightly-reverse {
+    0% {
+        top: 0;
+        left: .1rem;
+        opacity: 1;
+        filter: blur(0px)
+    }
+    50% {
+        top: .5rem;
+        left: -.15rem;
+        opacity: 0.5;
+        filter: blur(2px)
+    }
+    100% {
+        top: 0;
+        left: 0;
+        opacity: 1;
+        filter: blur(0px)
+    }
 }
 
-@keyframes fadeSlightly{
-    0% {opacity: 1; bottom: 0; left: 0; filter: blur(0px); filter: brightness(1)}
-    50% {opacity: .5; bottom: -.5rem; left: .05rem; filter: blur(3px); filter: brightness(1.5)}
-    75% {opacity: .25; bottom: -.1rem; left: -.2rem; filter: blur(1px); filter: brightness(1.2)}
-    100% {opacity: 1; bottom: 0; left: 0; filter: blur(0px); filter:brightness(1)}
+@keyframes fadeSlightly {
+    0% {
+        opacity: 1;
+        bottom: 0;
+        left: 0;
+        filter: blur(0px);
+        filter: brightness(1)
+    }
+    50% {
+        opacity: .5;
+        bottom: -.5rem;
+        left: .05rem;
+        filter: blur(3px);
+        filter: brightness(1.5)
+    }
+    75% {
+        opacity: .25;
+        bottom: -.1rem;
+        left: -.2rem;
+        filter: blur(1px);
+        filter: brightness(1.2)
+    }
+    100% {
+        opacity: 1;
+        bottom: 0;
+        left: 0;
+        filter: blur(0px);
+        filter: brightness(1)
+    }
 }
-
 
 :root {
     --splash-color: #0a061a;
