Tweaked CSS in CodeShowcase

--- a/src/components/code-showcase/code-showcase.css
+++ b/src/components/code-showcase/code-showcase.css
@@ -13,7 +13,6 @@
     min-width: 30vw;
     justify-content: center;
     align-items: center;
-    background-color: transparent;
 }
 
 .git-icon{
@@ -39,14 +38,18 @@
 }
 
 .showcase-heading{
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-family: 'Quicksand', sans-serif;
+    color: #12032e;
+    letter-spacing: .3rem;
 }
 
 .showcase-description{
+    max-width: 25vw;
     font-size: 1.3rem;
     font-family: 'Didact Gothic', sans-serif;
     padding: 2rem;
+    text-align: justify;
 }
 
 .showcase-technologies{
