--- a/src/components/painting-showcase/art-showcase.css
+++ b/src/components/painting-showcase/art-showcase.css
@@ -52,6 +52,18 @@
     grid-row: 9/span 1;
 }
 
+.quote6{
+    grid-column: 1/span 4;
+    grid-row: 10/span 2;
+    width: calc(1024px + 6rem);
+    height: calc(512px + 2rem);
+}
+
+.quote7{
+    grid-column: 4/span 1;
+    grid-row: 12/span 1;
+}
+
 .cellflags{
     height: 256px;
     width: 256px;
@@ -192,4 +204,21 @@
 .cell9-3{
     grid-column: 4/span 1;
     grid-row: 9/ span 1;
+}
+
+/* Chasing horizons */
+
+.cell10-1{
+    grid-column: 1/ span 1;
+    grid-row: 12/span 1;
+}
+
+.cell10-2{
+    grid-column: 2/ span 1;
+    grid-row: 12/span 1;
+}
+
+.cell10-3{
+    grid-column: 3/ span 1;
+    grid-row: 12/span 1;
 }
