Added a different font for Art stack and cutscene

--- a/src/components/art-cutscene/art-cutscene.css
+++ b/src/components/art-cutscene/art-cutscene.css
@@ -2,7 +2,7 @@
     --art-splash-color: #0a061a;
     --art-splash-shadow: #08a3fda1;
     --art-splash-shadow-fn: 0 .1rem .15rem var(--art-splash-shadow);
-    --art-splash-font: 'Cinzel Decorative', cursive;
+    --art-splash-font: 'Fredericka the Great', cursive;
     --art-splash-font-size: 8rem;
     --art-splash-padding: 3.5rem;
 }
