--- a/src/components/code-cutscene/code-cutscene.css
+++ b/src/components/code-cutscene/code-cutscene.css
@@ -1,8 +1,23 @@
+@keyframes floatSlightlyNoBlur {
+    0% {
+        top: 0;
+        left: .1rem;
+    }
+    50% {
+        top: -1.0rem;
+        left: -.1rem;
+    }
+    100% {
+        top: 0;
+        left: 0;
+    }
+}
+
 :root {
     --code-splash-color: #0a061a;
-    --code-splash-shadow: #08a3fda1;
-    --code-splash-shadow-fn: 0 .1rem .15rem var(--code-splash-shadow);
-    --code-splash-font: 'Oswald', sans-serif;
+    --code-splash-shadow: #40e0d065;
+    --code-splash-shadow-fn: 0 .1rem 1rem var(--code-splash-shadow);
+    --code-splash-font: 'Julius Sans One', sans-serif;
     --code-splash-font-size: 8rem;
     --code-splash-padding: 5.5rem;
 }
@@ -13,30 +28,15 @@
     min-height: 100vh;
 }
 
-.code-cutscene-chazing {
+.code-cutscene-projects {
     position: relative;
-    animation: flyLeft 1.5s ease-in-out 1s 1 normal both, floatSlightly 2.75s ease-in-out 3s infinite normal forwards;
+    animation: floatSlightlyNoBlur 2.75s ease-in-out 3s infinite normal forwards;
 }
 
-.code-cutscene-chazing_p {
+.code-cutscene-projects_p {
     font-family: var(--code-splash-font);
     font-size: var(--code-splash-font-size);
     padding-left: var(--code-splash-padding);
-    color: var(--code-splash-color);
-    text-shadow: var(--code-splash-shadow-fn);
-    user-select: none;
-}
-
-.code-cutscene-dreams {
-    position: relative;
-    animation: flyRight 1.5s ease-in-out 1s 1 normal both, floatSlightly-reverse 2.5s ease-in-out 2.5s infinite normal forwards;
-}
-
-.code-cutscene-dreams_p {
-    margin-top: -13rem;
-    font-family: var(--code-splash-font);
-    font-size: var(--code-splash-font-size);
-    padding-right: var(--code-splash-padding);
     color: var(--code-splash-color);
     text-shadow: var(--code-splash-shadow-fn);
     user-select: none;
