--- a/src/components/traits/traits.css
+++ b/src/components/traits/traits.css
@@ -1,5 +1,7 @@
 :root {
     --base-color: #03000e;
+    --base-font: 'Julius Sans One', sans-serif;
+    --base-shadow: 0.1rem .1rem .75rem #40e0d065;
 }
 
 @keyframes passion {
@@ -115,8 +117,8 @@
     grid-column: 1/span 2;
     grid-row: 1/ span 1;
     font-size: 5rem;
-    font-family: 'Russo One', sans-serif;
-    text-shadow: 0 .1rem .15rem #ff14918a;
+    font-family: var(--base-font);
+    text-shadow: var(--base-shadow);
     animation: passion .5s ease-out .25s 1 normal both paused;
 }
 
@@ -125,8 +127,8 @@
     grid-column: 3/ span 1;
     grid-row: 1/ span 1;
     font-size: 3rem;
-    font-family: 'Julius Sans One', sans-serif;
-    text-shadow: 0.1rem .1rem .5rem #ffa6008a;
+    font-family: var(--base-font);
+    text-shadow: var(--base-shadow);
     animation: creativity .5s ease-out .5s 1 normal both paused;
 }
 
@@ -135,8 +137,8 @@
     grid-column: 4/ span 1;
     grid-row: 1/span 1;
     font-size: 5rem;
-    font-family: 'Oswald', sans-serif;
-    text-shadow: 0 .1rem .15rem #dc143c8a;
+    font-family: var(--base-font);
+    text-shadow: var(--base-shadow);
     animation: grit .5s ease-out .75s 1 normal both paused;
 }
 
@@ -145,8 +147,8 @@
     grid-column: 1/ span 1;
     grid-row: 1/span 2;
     font-size: 5rem;
-    font-family: 'Cinzel', serif;
-    text-shadow: 0.1rem .1rem .75rem #00bfff8a;
+    font-family: var(--base-font);
+    text-shadow: var(--base-shadow);
     animation: empathy .5s ease-out 1s 1 normal both paused;
 }
 
@@ -155,8 +157,8 @@
     grid-column: 3/ span 2;
     grid-row: 1/span 2;
     font-size: 6rem;
-    font-family: 'Anton', sans-serif;
-    text-shadow: 0 .1rem .15rem #8b00008a;
+    font-family: var(--base-font);
+    text-shadow: var(--base-shadow);
     animation: leadership .5s ease-out 1.25s 1 normal both paused;
 }
 
@@ -165,8 +167,8 @@
     grid-column: 1/ span 2;
     grid-row: 2/span 1;
     font-size: 4rem;
-    font-family: 'Pacifico', cursive;
-    text-shadow: 0 .1rem .15rem #927a5ad8;
+    font-family: var(--base-font);
+    text-shadow: var(--base-shadow);
     animation: adaptability .5s ease-out 1.35s 1 normal both paused;
 }
 
@@ -175,7 +177,7 @@
     grid-column: 3/ span 2;
     grid-row: 2/span 1;
     font-size: 4rem;
-    font-family: 'Quicksand', sans-serif;
-    text-shadow: 0.1rem .1rem .5rem #ffd9008a;
+    font-family: var(--base-font);
+    text-shadow: var(--base-shadow);
     animation: learnability .5s ease-out 1.45s 1 normal both paused;
 }
