--- a/src/components/code-showcase/code-showcase.css
+++ b/src/components/code-showcase/code-showcase.css
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(1ft, 2ft));
     grid-gap: 0;
-    border-top: .2rem solid lavender;
+    border-top: .2rem solid #40e0d021;
 }
 
 .showcase-details{
