--- a/src/components/painting-showcase/art-showcase.css
+++ b/src/components/painting-showcase/art-showcase.css
@@ -5,7 +5,7 @@
     grid-template-columns: repeat(auto-fill, minmax(1ft, 1ft));
     grid-gap: 0.5rem;
 }
-
+/* 
 .quoteflags{
     display: flex;
     flex-direction: column;
@@ -55,7 +55,7 @@
 .quote6{
     grid-column: 4/span 1;
     grid-row: 10/span 1;
-}
+} */
 
 .cellflags{
     height: 256px;
@@ -152,7 +152,7 @@
     grid-row: 5/ span 1;
 }
 
-.cell-6-3{
+.cell6-3{
     grid-column: 4/ span 1;
     grid-row: 5/ span 1;
 }
@@ -214,4 +214,40 @@
 .cell10-3{
     grid-column: 3/ span 1;
     grid-row: 10/span 1;
+}
+
+/* Lord dominator */
+
+.cell11{
+    grid-column: 1/span 1;
+    grid-row: 4/span 2;
+    width: calc(256px);
+    height: calc(512px + 2rem);
+    background-position: center;
+    background-color: grey;
+}
+
+/* Fireflies */
+
+.cell12{
+    grid-column: 3/span 2;
+    grid-row: 6/ span 2;
+    width: calc(512px + 2rem);
+    height: calc(512px + 2rem);
+    background-attachment: fixed;
+    background-position: right;
+}
+
+/* Trees */
+
+.cell13{
+    grid-column: 4/span 1;
+    grid-row: 3/ span 1;
+}
+
+/* Planet */
+
+.cell14{
+    grid-column: 2/span 1;
+    grid-row: 2/ span 1;
 }
