--- a/src/components/social-media-fab/social-media-fab.css
+++ b/src/components/social-media-fab/social-media-fab.css
@@ -13,7 +13,7 @@
     border-radius: 50%;
     border-top: .15rem solid #fcfcfc;
     border-bottom: .05rem solid #afeeeeb2;
-    box-shadow: 0 .1rem 1rem #40e0d065
+    box-shadow: 0 .1rem 1rem #40e0d065;
 }
 
 .social-media-link{
