--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -7,3 +7,17 @@
     margin: 0;
     min-height: 100vh;
 }
+
+@media only screen and (max-width: 800px){
+    .intro-main{
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .intro-main{
+        display: flex;
+        flex-direction: column;
+    }
+}
